--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <HTML>
     <BODY>
          <p>
-            <a href="ms-windows-store://pdp/?productid=9NNL2W3T81X0">App Name</a>
+            <a href="ms-windows-store://pdp/?productid=9NNL2W3T81X0">RetroArch</a>
+            <a href="ms-windows-store://pdp/?productid=9NJ89RVCLKL1">PSP</a>
          </p>
     </BODY>
 </HTML>
