--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <BODY>
          <p>
             <a href="ms-windows-store://pdp/?productid=9NNL2W3T81X0">RetroArch</a>
-            <a href="ms-windows-store://pdp/?productid=9NJ89RVCLKL1">PSP</a>
+            <a href="ms-windows-store://pdp/?productid=9P6RZS03Z00F">PSP</a>
          </p>
     </BODY>
 </HTML>
