--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
     <BODY>
          <p>
-            <a href="ms-windows-store://pdp/?productid=9NNL2W3T81X0">RetroArch</a>
+            <a href="ms-windows-store://pdp/?productid=9PDZ4956W4NR">RetroArch</a>
             <a href="ms-windows-store://pdp/?productid=9P6RZS03Z00F">PSP</a>
          </p>
     </BODY>
