--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
          <p>
             <a href="ms-windows-store://pdp/?productid=9PDZ4956W4NR">RetroArch</a>
             <a href="ms-windows-store://pdp/?productid=9P6RZS03Z00F">PSP</a>
+            <a href="ms-windows-store://pdp/?productid=9PMFMCFPZDFM">RAgratis</a>
          </p>
     </BODY>
 </HTML>
